# Mega-Robot

./: .gitignore  COMMIT_SUMMARY_2025-10-17.md  FIX_TF_CONFLICT.md  LICENSE  README.md  TESTING_GUIDE.md  UPLOAD_READY.md  USAGE_GUIDE.md  diagnose_pointcloud.sh  fix_rtabmap_pointcloud.sh  install_dependencies.sh  launch_navigation.sh  megarover_view.rviz  project_issues.md  project_overview.md  project_progress.md  start_navigation.sh  test_basic_functions.sh  test_build.sh  test_mid360_orientations.sh  test_navigation.sh  test_odometry_fusion.sh  test_rtabmap_tf_fix.sh  test_slam_mapping.sh  test_view.rviz  verify_all_fixes.sh  verify_mid360_tilt.sh  visualize_mid360_tilt.sh
docs/: AGENTS.md  DIRECTORY_STRUCTURE.md  GITHUB_PUSH_STATUS.md  GITHUB_UPLOAD_GUIDE.md  IMPROVEMENTS_2025-10-16.md  MAPPING_GUIDE.md  MAP_EXPORT_GUIDE.md  QUICK_START.md  README_TEST.md  TEST_RESULTS_2025-10-16.md  TF_CONFLICT_FIX_SUMMARY.md  TILT_OPTIMIZATION_2025-10-16.md  VIEW_MAP_GUIDE.md  project_plan.md
scripts/: README.md  cleanup_all_nodes.sh  fix_issues.sh  pre_test_check.sh  prepare_for_github.sh  reset_ros_env.sh  test_bringup.sh  test_full_mapping.sh  test_mapping.sh  test_navigation.sh  test_new_lidar_slam.sh  verify_mid360_dimensions.sh  verify_mid360_tilt.sh  view_map.sh  view_saved_map.sh
src/livox_ros_driver2/: CMakeLists.txt
src/livox_ros_driver2/config/: MID360_config.json  MID360_config.jsones  MID360_config_standalone.json
src/megarover3_ros2/: .gitignore  .gitmodules  README.md
src/megarover3_ros2/megarover3/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/megarover3_ros2/megarover3_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/megarover3_ros2/megarover3_bringup/launch/: robot.launch.py  ydlidar_tg30_launch.py  ydlidar_view.launch.py
src/megarover3_ros2/megarover3_bringup/params/: TG30.yaml
src/megarover3_ros2/megarover3_bringup/rviz/: laser.rviz  mega3.rviz
src/megarover3_ros2/megarover3_bringup/src/: mouse_receiver.cpp  pub_odom.cpp
src/megarover_navigation/: CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
src/megarover_navigation/config/: nav2_params.yaml  rtabmap_config.yaml  rtabmap_fusion.yaml  rtabmap_lidar3d.yaml  rtabmap_lidar_only.yaml  rtabmap_odom_only.yaml  rtabmap_rgbd_only.yaml
src/megarover_navigation/launch/: megarover_nav2.launch.py  megarover_nav2_slam.launch.py  megarover_rtabmap.launch.py  modular_rtabmap.launch.py  navigation.launch.py  odometry_fusion.launch.py  rtabmap_lidar_slam.launch.py  visualize_robot.launch.py
src/megarover_navigation/launch/sensors/: all_sensors.launch.py  livox_mid360.launch.py  realsense_d455.launch.py
src/megarover_navigation/megarover_navigation/: health_monitor.py  odometry_fusion.py  sensor_detector.py
src/megarover_navigation/msg/: HealthStatus.msg  SensorStatus.msg
src/megarover_navigation/rviz/: nav2_rviz_config.rviz  robot_model.rviz
src/megarover_navigation/scripts/: diagnose_rtabmap.sh  monitor_rtabmap.sh  record_bag.sh  start_modular_slam.sh  start_rtabmap_slam.sh  test_modular_system.py  validate_system.py
src/megarover_navigation/srv/: SwitchMode.srv
src/realsense-ros/realsense2_camera/: CMakeLists.txt  package.xml
src/realsense-ros/realsense2_camera/include/: base_realsense_node.h  constants.h  realsense_node_factory.h  ros_utils.h
src/realsense-ros/realsense2_camera/launch/: rs_launch.py  rs_multi_camera_launch_sync.py
src/realsense-ros/realsense2_camera/src/: base_realsense_node.cpp  pointcloud_filter.cpp  realsense_node_factory.cpp  tfs.cpp  (+1 more)
src/realsense-ros/realsense2_camera_msgs/: CMakeLists.txt  package.xml
src/realsense-ros/realsense2_description/: package.xml
src/t_robot_bringup/: CMakeLists.txt  README.md  package.xml
src/t_robot_bringup/config/: filters.yaml  static_tf.yaml  twist_mux.yaml
src/t_robot_bringup/launch/: base.launch.py  bringup.launch.py  sensors.launch.py  state_estimation.launch.py
src/t_robot_bringup/params/: ekf.yaml  livox_driver.yaml
src/t_robot_bringup/rviz/: mid360_calibration.rviz
src/t_robot_bringup/scripts/: imu_relay.py  time_sync_monitor.py
src/t_robot_slam/: CMakeLists.txt  README.md  package.xml
src/t_robot_slam/config/: preprocessing_params.yaml
src/t_robot_slam/config/navigation/: map.yaml  nav2_params.yaml
src/t_robot_slam/launch/: complete_navigation.launch.py  corrected_pointcloud_to_laserscan.launch.py  corrected_pointcloud_to_laserscan.launch.py.backup  localization.launch.py  map_odom_tf.launch.py  map_odom_tf_fixed.launch.py  map_odom_tf_v2.launch.py  mapping.launch.py  navigation.launch.py  navigation.launch.py.backup  pointcloud_to_laserscan.launch.py  preprocessing.launch.py  simple_navigation.launch.py  static_tf.launch.py  static_tf_fixed.launch.py
src/t_robot_slam/params/: rtabmap.yaml
src/t_robot_slam/rviz/: map_fixed.rviz  mapping.rviz  navigation.rviz  simple_map.rviz
src/t_robot_slam/scripts/: advanced_pcd_converter.py  corrected_pcd_converter.py  export_rtabmap.py  map_manager.py  mapping_recorder.py  mid360_map_converter.py  pcd_to_pgm.py  rtabmap_monitor.py  simple_advanced_converter.py  slam_monitor.py
src/t_robot_slam/src/: map_odom_tf_publisher.cpp  map_odom_tf_publisher_v2.cpp  pointcloud_preprocessor.cpp
src/vs_rover_options_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/vs_rover_options_description/meshes/bumper/: mega3_bumper_link.stl  mega3_bumper_plate.stl
src/vs_rover_options_description/meshes/cam_stay/: cam_mount_frame.stl  cam_mount_link.stl
src/vs_rover_options_description/meshes/lrf/: tg30.stl
src/vs_rover_options_description/urdf/bumper/: bumper_mega3.xacro
src/vs_rover_options_description/urdf/cam_stay/: cam_stay_mecanum3.xacro  cam_stay_mega3.xacro
src/vs_rover_options_description/urdf/depth_cam/: _d435.gazebo.xacro  _d435.urdf.xacro  _d435i.urdf.xacro  _d435i_imu_modules.urdf.xacro  _d455.urdf.xacro  _d455i.urdf.xacro
src/vs_rover_options_description/urdf/lidar/: mid360.xacro
src/vs_rover_options_description/urdf/lrf/: tg30_mecanum3.gazebo  tg30_mecanum3.xacro  tg30_mega3.gazebo  tg30_mega3.xacro
(+8 files in other folders)
