<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>t_robot_bringup</name>
  <version>0.1.0</version>
  <description>System integration and bringup package for T-Robot SLAM system</description>
  
  <maintainer email="user@example.com">T-Robot Team</maintainer>
  <license>MIT</license>
  
  <author>T-Robot SLAM Team</author>
  
  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Runtime dependencies -->
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_tools</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  
  <!-- Hardware interface dependencies -->
  <exec_depend>megarover_description</exec_depend>
  <exec_depend>megarover3_bringup</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>

  <!-- State estimation -->
  <exec_depend>robot_localization</exec_depend>

  <!-- Package dependencies -->
  
  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
