<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>megarover3</name>
  <version>1.0.0</version>
  <description>Metapackage that contains all essential packages for Megarover Ver.3.0</description>
  <license>Apache License 2.0</license>
  
  <author email="jie@vstone.co.jp">Jie</author>
  <maintainer email="infodesk@vstone.co.jp">Vstone</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>megarover3_bringup</exec_depend>
  <exec_depend>megarover_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
